--- a/bower.json
+++ b/bower.json
@@ -9,10 +9,10 @@
     "Héctor Molinero Fernández <hector@molinero.xyz>"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/zant95/font-roboto",
+  "homepage": "https://github.com/hectorm/font-roboto",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zant95/font-roboto.git"
+    "url": "https://github.com/hectorm/font-roboto.git"
   },
   "main": "roboto.html"
 }
